--- a/RockPaperScissors_console.html
+++ b/RockPaperScissors_console.html
@@ -7,33 +7,79 @@
 <body>
   
   <script>
-  var max=1;
-  var min=3;
-  function computerPlay{
-    var choice=Math.floor(Math.random() *(max - min + 1) + min);
-    if choice ==1 
+  //var max=1;
+  //var min=3;
+  var counterPl=0;
+  var counterPc=0;
+
+  function computerPlay(){
+    var choice=Math.floor(Math.random() * 3) + 1   //values 1 to 3
+    if (choice ==1) 
     return ("Rock");
-    else if choice ==2
+    else if (choice ==2)
     return ("Paper");
-    else if choice ==3
+    else if (choice ==3)
     return ("Scissors");
   }
-  function Round_play(playerSelection, computerSelection){
+
+
+  function playRound(playerSelection, computerSelection){
     playerSelection=playerSelection.toUpperCase()
     computerSelection=computerSelection.toUpperCase()
+
     if (playerSelection=="PAPER" && computerSelection=="ROCK")
-    {return ("You Lose! Paper beats Rock");}
+    {//return ("You Lose Computer! Paper beats Rock");
+      counterPl=counterPl+1;}
+
+    else if (playerSelection=="PAPER" && computerSelection=="SCISSORS")
+    {//return ("You Lose Player! SCISSORS beats PAPER");
+        counterPc=counterPc+1;}
+
     else if (playerSelection=="ROCK" && computerSelection=="SCISSORS")
-    {return ("You Lose! Rock beats Scissors");}
+    {//return ("You Lose Computer! Rock beats Scissors");
+      counterPl=counterPl+1;}
+
+    else if (playerSelection=="ROCK" && computerSelection=="PAPER")
+    {//return ("You Lose Player! PAPER beats ROCK");
+          counterPc=counterPc+1;}
+
     else if (playerSelection=="SCISSORS" && computerSelection=="PAPER")
-    {return ("You Lose! Scissors beats Paper");}
-    else if (playerSelection==computerSelection)
-    {return("We have a tie!")}
-    else
-    {return("WRONG INPUT!!!")}
+    {//return ("You Lose Computer! Scissors beats Paper");
+        counterPl=counterPl+1;}
 
-  }
 
+   else if (playerSelection=="SCISSORS" && computerSelection=="ROCK")
+    {//return ("You Lose Player! ROCK beats SCISSORS");
+          counterPc=counterPc+1;}
+        }
+
+    //else if (playerSelection==computerSelection)
+    //{return("We have a tie!")}
+    
+  function game(){
+      if (counterPl>counterPc)
+        console.log("Player wins ",counterPl," to ",counterPc)
+      else if (counterPl<counterPc)
+         console.log("Computer wins "+counterPc+" to "+counterPl)
+      else if (counterPl==0 && counterPc==0)
+        console.log("All inputs wrong");
+      else
+        console.log("Tie");
+
+    }
+
+    var i;
+    for (i = 0; i <=4; i++) { 
+      playerSelection = prompt("Gimme input PLEASE!")
+      computerSelection = computerPlay()
+      playRound(playerSelection, computerSelection)
+      console.log("Player input n."+(i+1)+", you pressed: "+playerSelection)
+      console.log("PC input n."+(i+1)+",             presessed: "+computerSelection)}
+      game()
+
+//const playerSelection = 'rock'
+//const computerSelection = computerPlay()
+//console.log(playRound(playerSelection, computerSelection))
 
   </script>
 </body>
