--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ function playRound(input){
    else if (playerSelection=="SCISSORS" && computerSelection=="ROCK")
     {//return ("You Lose Player! ROCK beats SCISSORS");
           counterPc=counterPc+1;}
-     document.getElementById('footer').innerHTML += "  (round: "+i+")"+"<br>";
+     document.getElementById('footer').innerHTML += "  (round: "+i+")"+", ";
 
  }
 
